test/valid/fc36956_ArrayList/RegularNodeString.plume


class RegularNodeString extends RegularNode is
	field myValue : String
	
	method getValue : () -> String is
		myValue
		
