test/invalid/41625_WrongCast/WrongCast.plume

class WrongCast extends Object is
	 
	method t : () -> String is 
		1 as String 
					